# fmrisim

./: .gitattributes  Makefile  README.md  codecov.yml  fMRIsim.py  setup.cfg  setup.py  simulate.py  testing.ipynb  versioneer.py
.circleci/: config.yml
data/: empty+orig.HEAD  simulation_bold.npy  simulation_data.npy  simulation_innovation.npy  simulation_noise.npy  simulation_r2.npy
dependencies/: hrf_matrix.py  simulate.py  volumes.py
fMRIsim/: __init__.py  _version.py  fMRIsim.py  hrf_matrix.py  io.py  simulate.py  utils.py  volumes.py
fMRIsim/cli/: __init__.py  fMRIsim.py
fMRIsim/tests/: conftest.py  test_hrf_matrix.py  test_integration.py  test_io.py  test_volumes.py
