[metadata]
name = fMRIsim
url = https://github.com/eurunuela/fmrisim
author = Eneko Uruñuela
author_email = e.urunuela@bcbl.eu
maintainer = Eneko Uruñuela
maintainer_email = e.urunuela@bcbl.eu
description = "A simple Python package to simulate fMRI data."
long_description = file:README.md
long_description_content_type = text/x-md; charset=UTF-8
license = Apache 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
    numpy
    nibabel
    scipy
tests_require =
    pytest >=5.3
test_suite = pytest
packages = find:
include_package_data = False

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest
    pytest-cov
    coverage
    %(doc)s
    %(style)s
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = fMRIsim/_version.py
versionfile_build = fMRIsim/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
exclude=
    *build/
    _version.py
    tests
ignore = E126, E203, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
